# vatify-python

./: .gitignore  LICENSE  README.md  after_inspect.sh  inspect.sh  pyproject.toml
src/: test_smoke.py
src/vatify/: __init__.py  cli.py  client.py
tests/: test_smoke.py
