[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"


[project]
name = "vatify"
version = "0.1.5"
description = "Official Python SDK for Vatify — EU VAT validation, rates, and calculation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vatify Team" }]
keywords = ["VAT", "EU VAT", "tax", "API", "validation", "rates"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business :: Financial :: Accounting"
]

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[project.urls]
Homepage = "https://vatifytax.app"
Documentation = "https://vatifytax.app"
Repository = "https://github.com/vatifytax/vatify-python"
Issues = "https://github.com/vatifytax/vatify-python/issues"



[project.scripts]
vatify = "vatify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vatify"]

[tool.hatch.build.targets.sdist]
include = ["src/vatify", "README.md", "LICENSE", "pyproject.toml"]
